--- a/MGSHDFix.ini
+++ b/MGSHDFix.ini
@@ -13,6 +13,15 @@ Height = 0
 Windowed = false
 Borderless = false
 
+[Launcher Config]
+; Overrides the default config settings that the game uses when launching EXE directly
+; (if launched through the games launcher these will have no effect)
+
+; CtrlType: 0 = PS5, 1 = PS4, 2 = XBOX, 3 = NX, 4 = STMD, 5 = KBD
+CtrlType = 5
+Region = 0
+Language = 0
+
 [Disable Mouse Cursor]
 ; Stops the mouse cursor from showing.
 Enabled = true
