All: allow overriding default launch config (button style etc)

--- a/MGSHDFix.ini
+++ b/MGSHDFix.ini
@@ -23,6 +23,16 @@ Samples = 16
 ; Disable this if you want pillarboxing/letterboxing with your custom resolution.
 Enabled = true
 
+[Launcher Config]
+; Allows changing the default config used by the game when game EXE is launched directly
+; (if launched through the normal launcher these settings will have no effect)
+; Launching game EXE requires a steam_appid.txt file to exist in game folder
+
+; CtrlType: 0 = PS5, 1 = PS4, 2 = XBOX, 3 = NX, 4 = STMD, 5 = KBD
+CtrlType = 5
+Region = 0
+Language = 0
+
 [Skip Intro Logos]
 ; Skips the unskippable KONAMI etc logo images on startup, skippable intro videos will still be played
 ; Skipping logos for MG1 / MG2 (the MSX games) not currently supported.
