All: try creating steam_appid.txt to allow game to run directly in future launches

--- a/MGSHDFix.ini
+++ b/MGSHDFix.ini
@@ -26,7 +26,7 @@ Enabled = true
 [Launcher Config]
 ; Allows changing the default config used by the game when game EXE is launched directly
 ; (if launched through the normal launcher these settings will have no effect)
-; Launching game EXE requires a steam_appid.txt file to exist in game folder
+; Launching game EXE requires a steam_appid.txt file to exist in game folder (MGSHDFix will try creating this for you if it doesn't exist)
 
 ; CtrlType: 0 = PS5, 1 = PS4, 2 = XBOX, 3 = NX, 4 = STMD, 5 = KBD
 CtrlType = 5
